Clean up project and add acknowledgments
- Remove documentation deployment workflow
- Remove docs-related scripts and dependencies
- Delete docs directory
- Update README badges and links to point to new repository
- Add acknowledgments section crediting original jamubc/gemini-mcp-tool
- Remove unnecessary devDependencies (vitepress, mermaid, etc.)

--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "dev": "tsc && node dist/index.js",
     "test": "echo \"No tests yet\" && exit 0",
     "lint": "tsc --noEmit",
-    "contribute": "tsx src/contribute.ts",
-    "prepublishOnly": "echo '⚠️  Remember to test locally first!' && npm run build",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "prepublishOnly": "echo '⚠️  Remember to test locally first!' && npm run build"
   },
   "keywords": [
     "mcp",
@@ -59,12 +55,7 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.0",
     "@types/node": "^20.0.0",
-    "archiver": "^7.0.1",
-    "mermaid": "^11.9.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0",
-    "vitepress": "^1.6.3",
-    "vitepress-plugin-mermaid": "^2.0.17"
+    "typescript": "^5.0.0"
   },
   "publishConfig": {
     "access": "public"
